prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/not_allowed_in_const.nut
// EXPECT_ERROR: "is not allowed in constant"
local i = 0
const X = i++
